0.3.3
New feature - added login template
0.3.2.1
Bugfix - Added to installer "git reset --hard" to reset the staging area to match the most recent commit (by tristan)
Bugfix - Added show_services to admin backend area
0.3.2
- Increase font-size of table buttons
- Removed exterior border of tables
- Updated color admin - reseller - user
- New user level sub nav - media-query > 1024px
- Added margin to lc-content in left-nav - media-query > 1024px
- Added color to admin icon (dashboard)
- Modified show-user icon to icon-group
- Updated installer, with git pull to update. (by tristan)

0.3.1
- Improved iphone 5 visualization
- Added icon to menu
- Re worked sub-nav
	- icon color added to differenciate user level
	- added new dropdown
	- added new icons
- Removed user level of end-user
- Added more info to install
- Updated footer language
- Added 1.48 DA styles -> http://www.directadmin.com/features.php?id=1718
- Minimal css changes
	- removed uppercase of .lc-content h4
	- removed border-bottom of input submit and button, and added transition effect